fix logo , some details

--- a/Index.html
+++ b/Index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Daily Tuition</title>
+    <title>Adrian Kwan</title>
 
 
     <!--  Bootstrap css file  -->
@@ -40,7 +40,7 @@
     <header class="header_area">
         <div class="main-menu">
             <nav class="navbar navbar-expand-lg navbar-light">
-                <a class="navbar-brand" href="#"><img src="./img/logo.png" alt="logo"></a>
+                <a class="navbar-brand" href="#"><img src="./img/logo/Adrian_k.png" alt="logo" width="64" height="64"></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -273,7 +273,7 @@
                             </div>
                             <div class="title py-4">
                                 <h4 class="text-uppercase"><a href="https://github.com/AdrianKpi/Authorization-App" target="_blank" class="text-decoration-none text-dark"> Authorization App</a></h4>
-                                <span class="text-secondary">Latest, Portfolio</span>
+                                <span class="text-secondary">Latest, Javascript</span>
                                 <a href="https://github.com/AdrianKpi/Authorization-App " target="_blank" class="text-primary text-decoration-none"> View on GitHub </a>
                             </div>
                         </div>
@@ -286,8 +286,8 @@
                                 </a>
                             </div>
                             <div class="title py-4">
-                                <h4 class="text-uppercase"><a href="https://github.com/AdrianKpi/hangsman-react-app" target="_blank" class="text-decoration-none text-dark"></a>Hangsman-React-App</h4>
-                                <span class="text-secondary">Popular, Portfolio</span>
+                                <h4 class="text-uppercase"><a href="https://github.com/AdrianKpi/hangsman-react-app" target="_blank" class="text-decoration-none text-dark"></a>Hangsman</h4>
+                                <span class="text-secondary">Popular, React</span>
                                 <a href="https://github.com/AdrianKpi/hangsman-react-app " target="_blank" class="text-primary text-decoration-none"> View on GitHub </a>
                             </div>
                         </div>
@@ -300,13 +300,13 @@
                                 </a>
                             </div>
                             <div class="title py-4">
-                                <h4 class="text-uppercase"><a href="" target="_blank" class="text-decoration-none text-dark"></a>Expense-Tracker-React-App </h4>
-                                <span class="text-secondary">Popular, Portfolio</span>
+                                <h4 class="text-uppercase"><a href="" target="_blank" class="text-decoration-none text-dark"></a>Expense-Tracker</h4>
+                                <span class="text-secondary">Popular, React</span>
                                 <a href="https://github.com/AdrianKpi/expense-tracker-react" target="_blank" class="text-primary text-decoration-none"> View on GitHub </a>
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-sm-12 element-item upcoming">
+                    <!-- <div class="col-lg-4 col-md-6 col-sm-12 element-item upcoming">
                         <div class="our-project">
                             <div class="img">
                                 <a class="test-popup-link" href="./img/services/Images/ECommerce Web-Nov/Business.jpg">
@@ -319,7 +319,7 @@
                                 <a href="https://github.com/AdrianKpi/ECommerence-Web-Nov" target="_blank" class="text-primary text-decoration-none"> View on GitHub </a>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                     <div class="col-lg-4 col-md-6 col-sm-12 element-item upcoming">
                         <div class="our-project">
                             <div class="img">
@@ -329,7 +329,7 @@
                             </div>
                             <div class="title py-4">
                                 <h4 class="text-uppercase">Exercise Tracker</h4>
-                                <span class="text-secondary">Upcoming, Portfolio</span>
+                                <span class="text-secondary">Upcoming, React</span>
                                 <a href="https://github.com/AdrianKpi/Exercise-Tracker-React " target="_blank" class="text-primary text-decoration-none"> View on GitHub </a>
                             </div>
                         </div>
@@ -344,7 +344,7 @@
                             </div>
                             <div class="title py-4">
                                 <h4 class="text-uppercase"> <a href="https://calculator-adrian.netlify.app/" target="_blank" class="text-decoration-none text-dark">Calculator App</a></h4>
-                                <span class="text-secondary">Following, Portfolio</span><br/>
+                                <span class="text-secondary">Following, Javascript</span><br/>
                                 <a href="https://github.com/AdrianKpi/Calculator" target="_blank" class="text-primary text-decoration-none"> View on GitHub </a>
                             </div>
                         </div>
@@ -358,7 +358,7 @@
                             </div>
                             <div class="title py-4">
                                 <h4 class="text-uppercase">Music Player</h4> 
-                                <span class="text-secondary">Following, Portfolio</span>
+                                <span class="text-secondary">Following, Javascript</span>
                                 <a href="https://github.com/AdrianKpi/Music-App-Oct-2021 " target="_blank" class="text-primary text-decoration-none"> View on GitHub </a>
                             </div>
                         </div>
@@ -453,7 +453,7 @@
         <div class="container">
             <div class="">
                 <div class="site-logo text-center py-4">
-                    <a href="#"><img src="./img/logo.png" alt="logo"></a>
+                    <a href="#"><img src="./img/logo/Adrian_k.png" alt="logo" width="128" height="128"></a>
                 </div>
                 <div class="social text-center">
                     <h5 class="text-uppercase">Follow me</h5>
