--- a/Index.html
+++ b/Index.html
@@ -147,7 +147,7 @@
                                 <h2>
                                     <span>Years</span>
                                     <span>Experience Of</span>
-                                    <span>Studying/Working</span>
+                                    <span>Studying</span>
                                 </h2>
                             </div>
                             <div class="d-flex flex-row flex-wrap call-area">
@@ -376,41 +376,7 @@
                 <div class="row text-center">
                     <div class="col-12">
                         <div class="about-title">
-                            <h1 class="text-uppercase title-h1">Recommendations</h1>
-                            <p class="para">
-                                Here's an catalogue of personal recommendations by people who've browsed through my work.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="container carousel py-lg-5">
-                <div class="owl-carousel owl-theme">
-                    <div class="client row">
-                        <div class="col-lg-4 col-md-12 client-img">
-                            <img src="./img/testimonials/jane.jpg" alt="img1" class="img-fluid">
-                        </div>
-                        <div class="col-lg-8 col-md-12 about-client">
-                            <h4 class="text-uppercase">Dr Jane Lim</h4>
-                            <h4 class=>INTI International College Subang</h4>
-                            <p class="para">Dr Jane Lim joined INTI in 1998 as a Computing & IT lecturer and has since held numerous academic and management positions, 
-                                including Programme Coordinator, Head of Programme, Dean for the Faculty of Informatics, Dean for the School of Computing, 
-                                Dean for the Centre for University of Wollongong (UOW) programmes and Interim Academic Director.</p>
-                        </div>
-                    </div>
-                    <div class="client row">
-                        <div class="col-lg-4 col-md-12 client-img">
-                            <img src="./img/testimonials/hemalatha_murugiah.jpg" alt="img2" class="img-fluid">
-                        </div>
-                        <div class="col-lg-8 col-md-12 about-client">
-                            <h4 class="text-uppercase">Hemalatha Murugiah</h4>
-                            <p class="para">With almost two decades of experience in tertiary education, Hemalatha Murugiah is currently the Chief Executive of INTI International College Subang. 
-                                She was formerly the Dean of School of Engineering & Technology before being promoted as the Academic Director in 2015. She is actively involved in much collaborations 
-                                with industries and government linked organizations.</p>
-                        </div>
-                    </div>
-                  
+                           
                 </div>
             </div>
 
