Fixed services cart

--- a/Index.html
+++ b/Index.html
@@ -88,7 +88,7 @@
                             <div class="d-flex flex-row flex-wrap">
                                 <button type="button" class="btn button primary-button mr-4 text-uppercase">hire
                                     me</button>
-                                <button type="button" class="btn button secondary-button text-uppercase">Get cv</button>
+                                <a href="./CV/Resume Kwan Jing Rong.pdf" class="btn button secondary-button text-uppercase"download>Get cv</a>
                             </div>
                         </div>
                     </div>
@@ -183,7 +183,7 @@
                 </div>
                 <div class="container services-list">
                     <div class="row">
-                        <div class="col-lg-3 col-md-6 col-sm-12">
+                        <div class="col-lg-6 col-md-6 col-sm-12 d-flex justify-content-center align-items-ceneter">
                             <div class="services">
                                 <div class="sevices-img text-center py-4">
                                     <img src="./img/services/s1.png" alt="Services-1">
@@ -195,23 +195,9 @@
                                         are in capable hands.
                                     </p>
                                 </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-md-6 col-sm-12">
-                            <div class="services">
-                                <div class="sevices-img text-center py-4">
-                                    <img src="./img/services/s2.png" alt="Services-2">
-                                </div>
-                                <div class="card-body text-center">
-                                    <h5 class="card-title text-uppercase font-roboto">ux/ui design</h5>
-                                    <p class="card-text text-secondary">
-                                        Providing both a human-first approach to product design
-                                        and aesthetic experience.
-                                    </p>
                                 </div>
                             </div>
-                        </div>
-                        <div class="col-lg-3 col-md-6 col-sm-12">
+                        <div class="col-lg-6 col-md-6 col-sm-12 d-flex justify-content-center align-items-ceneter">
                             <div class="services">
                                 <div class="sevices-img text-center py-4">
                                     <img src="./img/services/s3.png" alt="Services-3">
@@ -223,25 +209,12 @@
                                         Content and details can be arranged here.
                                     </p>
                                 </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-md-6 col-sm-12">
-                            <div class="services">
-                                <div class="sevices-img text-center py-4">
-                                    <img src="./img/services/s4.png" alt="Services-4">
-                                </div>
-                                <div class="card-body text-center">
-                                    <h5 class="card-title text-uppercase font-roboto">Research Studies</h5>
-                                    <p class="card-text text-secondary">
-                                       Numerical or measurable data and personal accounts are available 
-                                       in the form of on-site resources.
-                                    </p>
-                                </div>
-                            </div>
                         </div>
                     </div>
+
                 </div>
             </div>
+        </div>
         </section>
 
         <!--  ====================== End Services Area =============================  -->
