Adding social media links

--- a/Index.html
+++ b/Index.html
@@ -396,9 +396,9 @@
                 </div>
                 <div class="social text-center">
                     <h5 class="text-uppercase">Follow me</h5>
-                    <a href="#"><i class="fab fa-facebook"></i></a>
-                    <a href="#"><i class="fab fa-linkedin"></i></a>
-                    <a href="#"><i class="fab fa-github"></i></a>
+                    <a href="https://www.facebook.com/jingrong.kwan"><i class="fab fa-facebook"></i></a>
+                    <a href="https://www.linkedin.com/in/kwan-jing-rong-b27801248/"><i class="fab fa-linkedin"></i></a>
+                    <a href="https://github.com/AdrianKpi"><i class="fab fa-github"></i></a>
                     
                 </div>
                 <div class="copyrights text-center">
