--- a/Index.html
+++ b/Index.html
@@ -403,8 +403,8 @@
                 </div>
                 <div class="copyrights text-center">
                     <p class="para">
-                        Copyright ©2022 All rights reserved | This website was made with 
-                        <a href="#"><span style="color: var(--primary-color);">Bootstrap</span></a>
+                        Copyright ©2022 All rights reserved | This website was made by 
+                        <a href="#"><span style="color: var(--primary-color);">Adrian Kwan</span></a>
                     </p>
                 </div>
             </div>
