New Link to Resume

--- a/Index.html
+++ b/Index.html
@@ -126,7 +126,7 @@
                                 check for further details .
                             </p>
                         </div>
-                        <button type="button" class="btn button primary-button text-uppercase">My Repertoire</button>
+                        <a href="./CV/Resume Kwan Jing Rong.pdf" class="btn button primary-button text-uppercase"download>My Repertoire</a>
                     </div>
                 </div>
             </div>
