--- a/Index.html
+++ b/Index.html
@@ -88,7 +88,7 @@
                             <div class="d-flex flex-row flex-wrap">
                                 <button type="button" class="btn button primary-button mr-4 text-uppercase">hire
                                     me</button>
-                                <a href="./CV/Resume Kwan Jing Rong.pdf" class="btn button secondary-button text-uppercase"download>Get cv</a>
+                                <a href="./CV/Resume Kwan Jing Rong Certified.pdf" class="btn button secondary-button text-uppercase"download>Get cv</a>
                             </div>
                         </div>
                     </div>
@@ -126,7 +126,7 @@
                                 check for further details .
                             </p>
                         </div>
-                        <a href="./CV/Resume Kwan Jing Rong.pdf" class="btn button primary-button text-uppercase"download>My Repertoire</a>
+                        <a href="./CV/Resume Kwan Jing Rong Certified.pdf" class="btn button primary-button text-uppercase"download>My Repertoire</a>
                     </div>
                 </div>
             </div>
