--- a/Index.html
+++ b/Index.html
@@ -86,9 +86,8 @@
                         <h4 class="title-text text-uppercase">Upcoming Developer</h4>
                         <div class="site-buttons">
                             <div class="d-flex flex-row flex-wrap">
-                                <button type="button" class="btn button primary-button mr-4 text-uppercase">hire
-                                    me</button>
-                                <a href="./CV/Resume Kwan Jing Rong Certified.pdf" class="btn button secondary-button text-uppercase"download>Get cv</a>
+
+                                <a href="./CV/Resume Kwan Jing Rong Certified.pdf" class="btn button secondary-button text-uppercase"download>Download Resume Here</a>
                             </div>
                         </div>
                     </div>
