--- a/Index.html
+++ b/Index.html
@@ -355,7 +355,7 @@
             <div class="container subscribe">
                 <div class="row">
                     <div class="col-lg-12 text-center subscribe-title">
-                        <h4 class="text-uppercase">Get your Updates here</h4>
+                        <h4 class="text-uppercase">Drop Your Email Here So I Could Contact You!</h4>
                         <p class="para">Please enter your email address.</p>
                     </div>
                 </div>
