--- a/Index.html
+++ b/Index.html
@@ -355,8 +355,8 @@
             <div class="container subscribe">
                 <div class="row">
                     <div class="col-lg-12 text-center subscribe-title">
-                        <h4 class="text-uppercase">Drop Your Info Here So I Could Contact You!</h4>
-                        <p class="para">Please enter your email address.</p>
+                        <h4 class="text-uppercase">Drop Your Info Here to Contact Me!</h4>
+                        <p class="para">Please enter your contact details.</p>
                     </div>
                 </div>
                 <div class="d-sm-flex justify-content-center">
