Adding of Contact Details
Name and Number

--- a/Index.html
+++ b/Index.html
@@ -363,6 +363,12 @@
                     <form class="w-50">
                         <div class="row d-flex flex-row flex-wrap">
                             <div class="col input-textbox">
+                                <input type="text" id="txtemail" class="form-control" placeholder="Name">
+                            </div>
+                            <div class="col input-textbox">
+                                <input type="text" id="txtemail" class="form-control" placeholder="Number">
+                            </div>
+                            <div class="col input-textbox">
                                 <input type="text" id="txtemail" class="form-control" placeholder="Email">
                             </div>
                             <div class="col">
