--- a/Index.html
+++ b/Index.html
@@ -375,6 +375,14 @@
                                 <div class="btn-submit">
                                     <button type="submit" class="btn btn-success float-right">Send</button>
                                 </div>
+                                <div class="col">
+                                    <div class="btn-submit">
+                                        <button type="submit" class="btn btn-success float-right">Send</button>
+                                    </div>
+                                    <div class="col">
+                                        <div class="btn-submit">
+                                            <button type="submit" class="btn btn-success float-right">Send</button>
+                                        </div>
                             </div>
                         </div>
                     </form>
