--- a/Index.html
+++ b/Index.html
@@ -142,11 +142,11 @@
                     <div class="col-xl-6 col-lg-12 col-md-12">
                         <div class="experience-area">
                             <div class="d-flex flex-row years-area">
-                                <h2 class="p-3 years">4</h2>
+                                <h2 class="p-3 years">Code Skills:</h2>
                                 <h2>
-                                    <span>Years</span>
-                                    <span>Experience Of</span>
-                                    <span>Studying</span>
+                                    <span>Python</span>
+                                    <span>HTML</span>
+                                    <span>CSS</span>
                                 </h2>
                             </div>
                             <div class="d-flex flex-row flex-wrap call-area">
