--- a/Index.html
+++ b/Index.html
@@ -125,7 +125,7 @@
                                 check for further details .
                             </p>
                         </div>
-                        <a href="./CV/Resume_Kwan_Jing_Rong_Certified.pdf" class="btn button primary-button text-uppercase"download>My Repertoire</a>
+                        <a href="" class="btn button primary-button text-uppercase"download>My Repertoire</a>
                     </div>
                 </div>
             </div>
