--- a/Index.html
+++ b/Index.html
@@ -61,7 +61,7 @@
                             <a class="nav-link" href="#Portfolio">portfolio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#Contact">contact</a>
+                            <a class="nav-link" href="#Contact Me">contact</a>
                         </li>
 
                     </ul>
