--- a/Index.html
+++ b/Index.html
@@ -355,7 +355,7 @@
             <div class="container subscribe">
                 <div class="row">
                     <div class="col-lg-12 text-center subscribe-title">
-                        <h4 class="text-uppercase">Drop Your Info Here to Contact Me!</h4>
+                        <h4 class="text-uppercase">Contact Me!</h4>
                         <p class="para">Please enter your contact details.</p>
                     </div>
                 </div>
